--- a/programacion web/proyectos/S1M1_Ejemplo1_JSP/Ejercicio_tabla/web/index.html
+++ b/programacion web/proyectos/S1M1_Ejemplo1_JSP/Ejercicio_tabla/web/index.html
@@ -10,7 +10,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit thi
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <a href="tabla.jsp">Tabla</a>
+        <a href="tabla.jsp">Ir a tabla</a>
         
 
     </body>
